name: GLUT
version: 2.5.1.1
license: BSD3
license-file: LICENSE
maintainer: Sven Panne <svenpanne@gmail.com>, Jason Dagit <dagitj@gmail.com>
bug-reports: https://github.com/haskell-opengl/GLUT/issues
homepage: http://www.haskell.org/haskellwiki/Opengl
category: Graphics
synopsis: A binding for the OpenGL Utility Toolkit
description:
   A Haskell binding for the OpenGL Utility Toolkit, a window system independent
   toolkit for writing OpenGL programs. For more information about the C library
   on which this binding is based, please see:
   <http://www.opengl.org/resources/libraries/glut/>.
build-type: Simple
cabal-version: >=1.6
extra-source-files:
   README.md
   examples/00-README
   examples/BOGLGP/00-README
   examples/BOGLGP/Chapter01/Makefile
   examples/BOGLGP/Chapter01/OnYourOwn1.hs
   examples/BOGLGP/Chapter01/Simple.hs
   examples/BOGLGP/Chapter02/Makefile
   examples/BOGLGP/Chapter02/OnYourOwn1.hs
   examples/BOGLGP/Chapter02/OpenGLApplication.hs
   examples/BOGLGP/Chapter03/Lines.hs
   examples/BOGLGP/Chapter03/Makefile
   examples/BOGLGP/Chapter03/OnYourOwn1.hs
   examples/BOGLGP/Chapter03/Points.hs
   examples/BOGLGP/Chapter03/Polygons.hs
   examples/BOGLGP/Chapter03/TrianglesQuads.hs
   examples/BOGLGP/Makefile
   examples/Makefile
   examples/Misc/00-README
   examples/Misc/ARBOcclude.hs
   examples/Misc/ColorTriangle/ColorTriangle.hs
   examples/Misc/ColorTriangle/Makefile
   examples/Misc/ColorTriangle/color_triangles.frac
   examples/Misc/ColorTriangle/color_triangles.vert
   examples/Misc/ExtractContours.hs
   examples/Misc/Gears.hs
   examples/Misc/Makefile
   examples/Misc/Pitfall14.hs
   examples/Misc/SmoothOpenGL3.hs
   examples/Misc/Triangulate.hs
   examples/OrangeBook/00-README
   examples/OrangeBook/3Dlabs-License.txt
   examples/OrangeBook/Makefile
   examples/OrangeBook/ogl2brick/Brick.frag
   examples/OrangeBook/ogl2brick/Brick.hs
   examples/OrangeBook/ogl2brick/Brick.vert
   examples/OrangeBook/ogl2brick/Makefile
   examples/RedBook4/00-README
   examples/RedBook4/AAIndex.hs
   examples/RedBook4/AARGB.hs
   examples/RedBook4/AccAnti.hs
   examples/RedBook4/AccPersp.hs
   examples/RedBook4/Alpha.hs
   examples/RedBook4/Alpha3D.hs
   examples/RedBook4/BezCurve.hs
   examples/RedBook4/BezMesh.hs
   examples/RedBook4/BezSurf.hs
   examples/RedBook4/BlendEqn.hs
   examples/RedBook4/Checker.hs
   examples/RedBook4/Clip.hs
   examples/RedBook4/ColorMat.hs
   examples/RedBook4/ColorMatrix.hs
   examples/RedBook4/ColorTable.hs
   examples/RedBook4/Combiner.hs
   examples/RedBook4/Convolution.hs
   examples/RedBook4/Cube.hs
   examples/RedBook4/CubeMap.hs
   examples/RedBook4/DList.hs
   examples/RedBook4/DOF.hs
   examples/RedBook4/Data/leeds.bin
   examples/RedBook4/Double.hs
   examples/RedBook4/DrawF.hs
   examples/RedBook4/Feedback.hs
   examples/RedBook4/Fog.hs
   examples/RedBook4/FogCoord.hs
   examples/RedBook4/FogIndex.hs
   examples/RedBook4/Font.hs
   examples/RedBook4/Hello.hs
   examples/RedBook4/Histogram.hs
   examples/RedBook4/Image.hs
   examples/RedBook4/Light.hs
   examples/RedBook4/Lines.hs
   examples/RedBook4/MVArray.hs
   examples/RedBook4/Makefile
   examples/RedBook4/Material.hs
   examples/RedBook4/Minmax.hs
   examples/RedBook4/Mipmap.hs
   examples/RedBook4/Model.hs
   examples/RedBook4/MoveLight.hs
   examples/RedBook4/MultiTex.hs
   examples/RedBook4/Multisamp.hs
   examples/RedBook4/PickDepth.hs
   examples/RedBook4/PickSquare.hs
   examples/RedBook4/Planet.hs
   examples/RedBook4/PointP.hs
   examples/RedBook4/PolyOff.hs
   examples/RedBook4/Polys.hs
   examples/RedBook4/Quadric.hs
   examples/RedBook4/ReadImage.hs
   examples/RedBook4/Robot.hs
   examples/RedBook4/Scene.hs
   examples/RedBook4/Select.hs
   examples/RedBook4/ShadowMap.hs
   examples/RedBook4/Smooth.hs
   examples/RedBook4/Stencil.hs
   examples/RedBook4/Stroke.hs
   examples/RedBook4/SurfPoints.hs
   examples/RedBook4/Surface.hs
   examples/RedBook4/Teapots.hs
   examples/RedBook4/Tess.hs
   examples/RedBook4/TessWind.hs
   examples/RedBook4/TexBind.hs
   examples/RedBook4/TexGen.hs
   examples/RedBook4/TexProx.hs
   examples/RedBook4/TexSub.hs
   examples/RedBook4/Texture3D.hs
   examples/RedBook4/TextureSurf.hs
   examples/RedBook4/Torus.hs
   examples/RedBook4/Trim.hs
   examples/RedBook4/UnProject.hs
   examples/RedBook4/VArray.hs
   examples/RedBook4/Wrap.hs
   examples/RedBook8/00-README
   examples/RedBook8/Chapter01/Makefile
   examples/RedBook8/Chapter01/triangles.frac
   examples/RedBook8/Chapter01/Triangles.hs
   examples/RedBook8/Chapter01/triangles.vert
   examples/RedBook8/common/LoadShaders.hs
   examples/RedBook8/common/Makefile
   examples/RedBook8/Makefile
   examples/examples.mk
   include/HsGLUTExt.h

flag UseNativeWindowsLibraries
   description:
      When compiling under Windows, use the native libraries instead of e.g. the
      ones coming with Cygwin.

library
   exposed-modules:
      Graphics.UI.GLUT,
      Graphics.UI.GLUT.Begin,
      Graphics.UI.GLUT.Callbacks,
      Graphics.UI.GLUT.Callbacks.Global,
      Graphics.UI.GLUT.Callbacks.Window,
      Graphics.UI.GLUT.Colormap,
      Graphics.UI.GLUT.Debugging,
      Graphics.UI.GLUT.DeviceControl,
      Graphics.UI.GLUT.Fonts,
      Graphics.UI.GLUT.GameMode,
      Graphics.UI.GLUT.Initialization,
      Graphics.UI.GLUT.Menu,
      Graphics.UI.GLUT.Objects,
      Graphics.UI.GLUT.Overlay,
      Graphics.UI.GLUT.State,
      Graphics.UI.GLUT.Window
   other-modules:
      Graphics.UI.GLUT.Callbacks.Registration,
      Graphics.UI.GLUT.QueryUtils,
      Graphics.UI.GLUT.Raw,
      Graphics.UI.GLUT.Raw.APIEntry,
      Graphics.UI.GLUT.Raw.Callbacks,
      Graphics.UI.GLUT.Raw.Fonts,
      Graphics.UI.GLUT.Raw.Functions,
      Graphics.UI.GLUT.Raw.Tokens,
      Graphics.UI.GLUT.Types
   include-dirs: include
   c-sources:
      cbits/HsGLUT.c
   build-depends: base >= 3 && < 5, array >= 0.3, containers >= 0.3, OpenGL >= 2.8.0.0, OpenGLRaw >= 1.3.0.0
   ghc-options: -Wall -O2
   if os(windows) && flag(UseNativeWindowsLibraries)
      if arch(i386)
         cpp-options: "-DCALLCONV=stdcall"
      else
         cpp-options: "-DCALLCONV=ccall"
      cc-options: "-DUSE_GETPROCADDRESS"
      extra-libraries: glut32
   else
      cpp-options: "-DCALLCONV=ccall"
      cc-options: "-DUSE_DLSYM"
      if os(darwin)
         frameworks: GLUT
      else
         extra-libraries: glut

source-repository head
  type:     git
  location: https://github.com/haskell-opengl/GLUT
