name: GLUT
version: 2.7.0.5
synopsis: A binding for the OpenGL Utility Toolkit
description:
  A Haskell binding for the OpenGL Utility Toolkit, a window system independent
  toolkit for writing OpenGL programs. For more information about the C library
  on which this binding is based, please see:
  <http://www.opengl.org/resources/libraries/glut/>.
homepage: http://www.haskell.org/haskellwiki/Opengl
bug-reports: https://github.com/haskell-opengl/GLUT/issues
copyright: Copyright (C) 2002-2016 Sven Panne
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>, Jason Dagit <dagitj@gmail.com>
category: Graphics
build-type: Simple
cabal-version: >=1.10
extra-source-files:
   CHANGELOG.md
   README.md
   examples/00-README
   examples/BOGLGP/00-README
   examples/Makefile
   examples/Misc/00-README
   examples/Misc/ColorTriangle/color_triangles.frag
   examples/Misc/ColorTriangle/color_triangles.vert
   examples/OrangeBook/00-README
   examples/OrangeBook/3Dlabs-License.txt
   examples/OrangeBook/ogl2brick/Brick.frag
   examples/OrangeBook/ogl2brick/Brick.vert
   examples/RedBook4/00-README
   examples/RedBook4/AAIndex.hs
   examples/RedBook4/AARGB.hs
   examples/RedBook4/AccAnti.hs
   examples/RedBook4/AccPersp.hs
   examples/RedBook4/Alpha.hs
   examples/RedBook4/Alpha3D.hs
   examples/RedBook4/BezCurve.hs
   examples/RedBook4/BezMesh.hs
   examples/RedBook4/BezSurf.hs
   examples/RedBook4/BlendEqn.hs
   examples/RedBook4/Checker.hs
   examples/RedBook4/Clip.hs
   examples/RedBook4/ColorMat.hs
   examples/RedBook4/ColorMatrix.hs
   examples/RedBook4/ColorTable.hs
   examples/RedBook4/Combiner.hs
   examples/RedBook4/Convolution.hs
   examples/RedBook4/Cube.hs
   examples/RedBook4/CubeMap.hs
   examples/RedBook4/DList.hs
   examples/RedBook4/DOF.hs
   examples/RedBook4/Data/leeds.bin
   examples/RedBook4/Double.hs
   examples/RedBook4/DrawF.hs
   examples/RedBook4/Feedback.hs
   examples/RedBook4/Fog.hs
   examples/RedBook4/FogCoord.hs
   examples/RedBook4/FogIndex.hs
   examples/RedBook4/Font.hs
   examples/RedBook4/Hello.hs
   examples/RedBook4/Histogram.hs
   examples/RedBook4/Image.hs
   examples/RedBook4/Light.hs
   examples/RedBook4/Lines.hs
   examples/RedBook4/MVArray.hs
   examples/RedBook4/Makefile
   examples/RedBook4/Material.hs
   examples/RedBook4/Minmax.hs
   examples/RedBook4/Mipmap.hs
   examples/RedBook4/Model.hs
   examples/RedBook4/MoveLight.hs
   examples/RedBook4/MultiTex.hs
   examples/RedBook4/Multisamp.hs
   examples/RedBook4/PickDepth.hs
   examples/RedBook4/PickSquare.hs
   examples/RedBook4/Planet.hs
   examples/RedBook4/PointP.hs
   examples/RedBook4/PolyOff.hs
   examples/RedBook4/Polys.hs
   examples/RedBook4/Quadric.hs
   examples/RedBook4/ReadImage.hs
   examples/RedBook4/Robot.hs
   examples/RedBook4/Scene.hs
   examples/RedBook4/Select.hs
   examples/RedBook4/ShadowMap.hs
   examples/RedBook4/Smooth.hs
   examples/RedBook4/Stencil.hs
   examples/RedBook4/Stroke.hs
   examples/RedBook4/SurfPoints.hs
   examples/RedBook4/Surface.hs
   examples/RedBook4/Teapots.hs
   examples/RedBook4/Tess.hs
   examples/RedBook4/TessWind.hs
   examples/RedBook4/TexBind.hs
   examples/RedBook4/TexGen.hs
   examples/RedBook4/TexProx.hs
   examples/RedBook4/TexSub.hs
   examples/RedBook4/Texture3D.hs
   examples/RedBook4/TextureSurf.hs
   examples/RedBook4/Torus.hs
   examples/RedBook4/Trim.hs
   examples/RedBook4/UnProject.hs
   examples/RedBook4/VArray.hs
   examples/RedBook4/Wrap.hs
   examples/RedBook8/00-README
   examples/RedBook8/Chapter01/triangles.frag
   examples/RedBook8/Chapter01/triangles.vert
   examples/examples.mk

flag UseNativeWindowsLibraries
  description:
    When compiling under Windows, use the native libraries instead of e.g. the
    ones coming with Cygwin.

flag BuildExamples
  description: Build various OpenGL/GLUT examples.
  default: False

library
  exposed-modules:
    Graphics.UI.GLUT
    Graphics.UI.GLUT.Begin
    Graphics.UI.GLUT.Callbacks
    Graphics.UI.GLUT.Callbacks.Global
    Graphics.UI.GLUT.Callbacks.Window
    Graphics.UI.GLUT.Colormap
    Graphics.UI.GLUT.Debugging
    Graphics.UI.GLUT.DeviceControl
    Graphics.UI.GLUT.Fonts
    Graphics.UI.GLUT.GameMode
    Graphics.UI.GLUT.Initialization
    Graphics.UI.GLUT.Menu
    Graphics.UI.GLUT.Objects
    Graphics.UI.GLUT.Overlay
    Graphics.UI.GLUT.State
    Graphics.UI.GLUT.Window
  other-modules:
    Graphics.UI.GLUT.Callbacks.Registration
    Graphics.UI.GLUT.QueryUtils
    Graphics.UI.GLUT.Raw
    Graphics.UI.GLUT.Raw.Callbacks
    Graphics.UI.GLUT.Raw.Fonts
    Graphics.UI.GLUT.Raw.Functions
    Graphics.UI.GLUT.Raw.Tokens
    Graphics.UI.GLUT.Types
  c-sources:
     cbits/HsGLUT.c
  hs-source-dirs: src
  build-depends:
    base         >= 3    && < 5,
    array        >= 0.3  && < 0.6,
    containers   >= 0.3  && < 0.6,
    transformers >= 0.2  && < 0.6,
    StateVar     >= 1.1  && < 1.2,
    OpenGL       >= 2.12 && < 3.1
  default-language: Haskell2010
  other-extensions: CPP
  ghc-options: -Wall
  if os(windows) && flag(UseNativeWindowsLibraries)
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_GETPROCADDRESS"
    extra-libraries: glut32
  else
    cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_DLSYM"
    if os(darwin)
      frameworks: GLUT
    else
      extra-libraries: glut

executable BOGLGP01-OnYourOwn1
  if !flag(BuildExamples)
    buildable: False
  main-is: OnYourOwn1.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter01
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP01-Simple
  if !flag(BuildExamples)
    buildable: False
  main-is: Simple.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter01
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP02-OnYourOwn1.hs
  if !flag(BuildExamples)
    buildable: False
  main-is: OnYourOwn1.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter02
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP02-OpenGLApplication.hs
  if !flag(BuildExamples)
    buildable: False
  main-is: OpenGLApplication.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter02
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-Lines
  if !flag(BuildExamples)
    buildable: False
  main-is: Lines.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-OnYourOwn1
  if !flag(BuildExamples)
    buildable: False
  main-is: OnYourOwn1.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-Points
  if !flag(BuildExamples)
    buildable: False
  main-is: Points.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-Polygons
  if !flag(BuildExamples)
    buildable: False
  main-is: Polygons.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-TrianglesQuads
  if !flag(BuildExamples)
    buildable: False
  main-is: TrianglesQuads.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-ARBOcclude
  if !flag(BuildExamples)
    buildable: False
  main-is: ARBOcclude.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-ColorTriangle
  if !flag(BuildExamples)
    buildable: False
  main-is: ColorTriangle.hs
  other-modules: LoadShaders
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, GLUT
  hs-source-dirs: examples/Misc/ColorTriangle, examples/RedBook8/common
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-ExtractContours
  if !flag(BuildExamples)
    buildable: False
  main-is: ExtractContours.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-Gears
  if !flag(BuildExamples)
    buildable: False
  main-is: Gears.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-Pitfall14
  if !flag(BuildExamples)
    buildable: False
  main-is: Pitfall14.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-SmoothOpenGL3
  if !flag(BuildExamples)
    buildable: False
  main-is: SmoothOpenGL3.hs
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, OpenGLRaw >= 1.0 && < 3.1, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-Triangulate
  if !flag(BuildExamples)
    buildable: False
  main-is: Triangulate.hs
  build-depends: base >= 3 && < 5, random >= 1.0 && < 1.2, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable OrangeBook-Brick
  if !flag(BuildExamples)
    buildable: False
  main-is: Brick.hs
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, GLUT
  hs-source-dirs: examples/OrangeBook/ogl2brick
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook8-Triangles
  if !flag(BuildExamples)
    buildable: False
  main-is: Triangles.hs
  other-modules: LoadShaders
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, GLUT
  hs-source-dirs: examples/RedBook8/Chapter01, examples/RedBook8/common
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/haskell-opengl/GLUT.git
