name: GLUT
version: 2.7.0.14
synopsis: A binding for the OpenGL Utility Toolkit
description:
  A Haskell binding for the OpenGL Utility Toolkit, a window system independent
  toolkit for writing OpenGL programs. For more information about the C library
  on which this binding is based, please see:
  <http://www.opengl.org/resources/libraries/glut/>.
homepage: http://www.haskell.org/haskellwiki/Opengl
bug-reports: https://github.com/haskell-opengl/GLUT/issues
copyright: Copyright (C) 2002-2018 Sven Panne
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>, Jason Dagit <dagitj@gmail.com>
category: Graphics
build-type: Simple
tested-with:
  GHC == 7.0.4
  GHC == 7.2.2
  GHC == 7.4.2
  GHC == 7.6.3
  GHC == 7.8.4
  GHC == 7.10.3
  GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.3
  GHC == 8.6.1
  GHC == 8.7.*
cabal-version: >= 1.10
extra-source-files:
   CHANGELOG.md
   README.md
   examples/00-README
   examples/BOGLGP/00-README
   examples/Misc/00-README
   examples/Misc/ColorTriangle/color_triangles.frag
   examples/Misc/ColorTriangle/color_triangles.vert
   examples/OrangeBook/00-README
   examples/OrangeBook/3Dlabs-License.txt
   examples/OrangeBook/ogl2brick/Brick.frag
   examples/OrangeBook/ogl2brick/Brick.vert
   examples/RedBook4/00-README
   examples/RedBook4/Data/leeds.bin
   examples/RedBook8/00-README
   examples/RedBook8/Chapter01/triangles.frag
   examples/RedBook8/Chapter01/triangles.vert

flag UseNativeWindowsLibraries
  description:
    When compiling under Windows, use the native libraries instead of e.g. the
    ones coming with Cygwin or MSYS.

flag BuildExamples
  description: Build various OpenGL/GLUT examples.
  default: False

library
  exposed-modules:
    Graphics.UI.GLUT
    Graphics.UI.GLUT.Begin
    Graphics.UI.GLUT.Callbacks
    Graphics.UI.GLUT.Callbacks.Global
    Graphics.UI.GLUT.Callbacks.Window
    Graphics.UI.GLUT.Colormap
    Graphics.UI.GLUT.Debugging
    Graphics.UI.GLUT.DeviceControl
    Graphics.UI.GLUT.Fonts
    Graphics.UI.GLUT.GameMode
    Graphics.UI.GLUT.Initialization
    Graphics.UI.GLUT.Menu
    Graphics.UI.GLUT.Objects
    Graphics.UI.GLUT.Overlay
    Graphics.UI.GLUT.State
    Graphics.UI.GLUT.Window
  other-modules:
    Graphics.UI.GLUT.Callbacks.Registration
    Graphics.UI.GLUT.QueryUtils
    Graphics.UI.GLUT.Raw
    Graphics.UI.GLUT.Raw.Callbacks
    Graphics.UI.GLUT.Raw.Fonts
    Graphics.UI.GLUT.Raw.Functions
    Graphics.UI.GLUT.Raw.Tokens
    Graphics.UI.GLUT.Types
  c-sources:
     cbits/HsGLUT.c
  hs-source-dirs: src
  build-depends:
    base         >= 3    && < 5,
    array        >= 0.3  && < 0.6,
    containers   >= 0.3  && < 0.7,
    transformers >= 0.2  && < 0.6,
    StateVar     >= 1.1  && < 1.2,
    OpenGL       >= 2.12 && < 3.1
  default-language: Haskell2010
  other-extensions: CPP
  ghc-options: -Wall
  if impl(ghc > 8)
    ghc-options: -Wcompat
  if os(windows) && flag(UseNativeWindowsLibraries)
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_GETPROCADDRESS"
  else
    cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_DLSYM"

executable BOGLGP01-OnYourOwn1
  if !flag(BuildExamples)
    buildable: False
  main-is: OnYourOwn1.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter01
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP01-Simple
  if !flag(BuildExamples)
    buildable: False
  main-is: Simple.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter01
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP02-OnYourOwn1.hs
  if !flag(BuildExamples)
    buildable: False
  main-is: OnYourOwn1.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter02
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP02-OpenGLApplication.hs
  if !flag(BuildExamples)
    buildable: False
  main-is: OpenGLApplication.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter02
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-Lines
  if !flag(BuildExamples)
    buildable: False
  main-is: Lines.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-OnYourOwn1
  if !flag(BuildExamples)
    buildable: False
  main-is: OnYourOwn1.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-Points
  if !flag(BuildExamples)
    buildable: False
  main-is: Points.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-Polygons
  if !flag(BuildExamples)
    buildable: False
  main-is: Polygons.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable BOGLGP03-TrianglesQuads
  if !flag(BuildExamples)
    buildable: False
  main-is: TrianglesQuads.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/BOGLGP/Chapter03
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-ARBOcclude
  if !flag(BuildExamples)
    buildable: False
  main-is: ARBOcclude.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-ColorTriangle
  if !flag(BuildExamples)
    buildable: False
  main-is: ColorTriangle.hs
  other-modules: LoadShaders
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, GLUT
  hs-source-dirs: examples/Misc/ColorTriangle, examples/RedBook8/common
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-ExtractContours
  if !flag(BuildExamples)
    buildable: False
  main-is: ExtractContours.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-Gears
  if !flag(BuildExamples)
    buildable: False
  main-is: Gears.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-Pitfall14
  if !flag(BuildExamples)
    buildable: False
  main-is: Pitfall14.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-SmoothOpenGL3
  if !flag(BuildExamples)
    buildable: False
  main-is: SmoothOpenGL3.hs
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, OpenGLRaw >= 1.0 && < 3.4, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable Misc-Triangulate
  if !flag(BuildExamples)
    buildable: False
  main-is: Triangulate.hs
  build-depends: base >= 3 && < 5, random >= 1.0 && < 1.2, GLUT
  hs-source-dirs: examples/Misc
  default-language: Haskell2010
  ghc-options: -Wall

executable OrangeBook-Brick
  if !flag(BuildExamples)
    buildable: False
  main-is: Brick.hs
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, GLUT
  hs-source-dirs: examples/OrangeBook/ogl2brick
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-AAIndex
  if !flag(BuildExamples)
    buildable: False
  main-is: AAIndex.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-AARGB
  if !flag(BuildExamples)
    buildable: False
  main-is: AARGB.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-AccAnti
  if !flag(BuildExamples)
    buildable: False
  main-is: AccAnti.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-AccPersp
  if !flag(BuildExamples)
    buildable: False
  main-is: AccPersp.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Alpha
  if !flag(BuildExamples)
    buildable: False
  main-is: Alpha.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Alpha3D
  if !flag(BuildExamples)
    buildable: False
  main-is: Alpha3D.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-BezCurve
  if !flag(BuildExamples)
    buildable: False
  main-is: BezCurve.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-BezMesh
  if !flag(BuildExamples)
    buildable: False
  main-is: BezMesh.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-BezSurf
  if !flag(BuildExamples)
    buildable: False
  main-is: BezSurf.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-BlendEqn
  if !flag(BuildExamples)
    buildable: False
  main-is: BlendEqn.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Checker
  if !flag(BuildExamples)
    buildable: False
  main-is: Checker.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Clip
  if !flag(BuildExamples)
    buildable: False
  main-is: Clip.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-ColorMat
  if !flag(BuildExamples)
    buildable: False
  main-is: ColorMat.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-ColorMatrix
  if !flag(BuildExamples)
    buildable: False
  main-is: ColorMatrix.hs
  other-modules: ReadImage
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-ColorTable
  if !flag(BuildExamples)
    buildable: False
  main-is: ColorTable.hs
  other-modules: ReadImage
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Combiner
  if !flag(BuildExamples)
    buildable: False
  main-is: Combiner.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Convolution
  if !flag(BuildExamples)
    buildable: False
  main-is: Convolution.hs
  other-modules: ReadImage
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Cube
  if !flag(BuildExamples)
    buildable: False
  main-is: Cube.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-CubeMap
  if !flag(BuildExamples)
    buildable: False
  main-is: CubeMap.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-DList
  if !flag(BuildExamples)
    buildable: False
  main-is: DList.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-DOF
  if !flag(BuildExamples)
    buildable: False
  main-is: DOF.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Double
  if !flag(BuildExamples)
    buildable: False
  main-is: Double.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-DrawF
  if !flag(BuildExamples)
    buildable: False
  main-is: DrawF.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Feedback
  if !flag(BuildExamples)
    buildable: False
  main-is: Feedback.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Fog
  if !flag(BuildExamples)
    buildable: False
  main-is: Fog.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-FogCoord
  if !flag(BuildExamples)
    buildable: False
  main-is: FogCoord.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-FogIndex
  if !flag(BuildExamples)
    buildable: False
  main-is: FogIndex.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Font
  if !flag(BuildExamples)
    buildable: False
  main-is: Font.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Hello
  if !flag(BuildExamples)
    buildable: False
  main-is: Hello.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Histogram
  if !flag(BuildExamples)
    buildable: False
  main-is: Histogram.hs
  other-modules: ReadImage
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Image
  if !flag(BuildExamples)
    buildable: False
  main-is: Image.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Light
  if !flag(BuildExamples)
    buildable: False
  main-is: Light.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Lines
  if !flag(BuildExamples)
    buildable: False
  main-is: Lines.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-MVArray
  if !flag(BuildExamples)
    buildable: False
  main-is: MVArray.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Material
  if !flag(BuildExamples)
    buildable: False
  main-is: Material.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Minmax
  if !flag(BuildExamples)
    buildable: False
  main-is: Minmax.hs
  other-modules: ReadImage
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Mipmap
  if !flag(BuildExamples)
    buildable: False
  main-is: Mipmap.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Model
  if !flag(BuildExamples)
    buildable: False
  main-is: Model.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-MoveLight
  if !flag(BuildExamples)
    buildable: False
  main-is: MoveLight.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-MultiTex
  if !flag(BuildExamples)
    buildable: False
  main-is: MultiTex.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Multisamp
  if !flag(BuildExamples)
    buildable: False
  main-is: Multisamp.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-PickDepth
  if !flag(BuildExamples)
    buildable: False
  main-is: PickDepth.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-PickSquare
  if !flag(BuildExamples)
    buildable: False
  main-is: PickSquare.hs
  build-depends: base >= 3 && < 5, array >= 0.1 && < 0.6, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Planet
  if !flag(BuildExamples)
    buildable: False
  main-is: Planet.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-PointP
  if !flag(BuildExamples)
    buildable: False
  main-is: PointP.hs
  build-depends: base >= 3 && < 5, random >= 1.0 && < 1.2, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-PolyOff
  if !flag(BuildExamples)
    buildable: False
  main-is: PolyOff.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Polys
  if !flag(BuildExamples)
    buildable: False
  main-is: Polys.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Quadric
  if !flag(BuildExamples)
    buildable: False
  main-is: Quadric.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Robot
  if !flag(BuildExamples)
    buildable: False
  main-is: Robot.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Scene
  if !flag(BuildExamples)
    buildable: False
  main-is: Scene.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Select
  if !flag(BuildExamples)
    buildable: False
  main-is: Select.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-ShadowMap
  if !flag(BuildExamples)
    buildable: False
  main-is: ShadowMap.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Smooth
  if !flag(BuildExamples)
    buildable: False
  main-is: Smooth.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Stencil
  if !flag(BuildExamples)
    buildable: False
  main-is: Stencil.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Stroke
  if !flag(BuildExamples)
    buildable: False
  main-is: Stroke.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-SurfPoints
  if !flag(BuildExamples)
    buildable: False
  main-is: SurfPoints.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Surface
  if !flag(BuildExamples)
    buildable: False
  main-is: Surface.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Teapots
  if !flag(BuildExamples)
    buildable: False
  main-is: Teapots.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Tess
  if !flag(BuildExamples)
    buildable: False
  main-is: Tess.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-TessWind
  if !flag(BuildExamples)
    buildable: False
  main-is: TessWind.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-TexBind
  if !flag(BuildExamples)
    buildable: False
  main-is: TexBind.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-TexGen
  if !flag(BuildExamples)
    buildable: False
  main-is: TexGen.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-TexProx
  if !flag(BuildExamples)
    buildable: False
  main-is: TexProx.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-TexSub
  if !flag(BuildExamples)
    buildable: False
  main-is: TexSub.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Texture3D
  if !flag(BuildExamples)
    buildable: False
  main-is: Texture3D.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-TextureSurf
  if !flag(BuildExamples)
    buildable: False
  main-is: TextureSurf.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Torus
  if !flag(BuildExamples)
    buildable: False
  main-is: Torus.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Trim
  if !flag(BuildExamples)
    buildable: False
  main-is: Trim.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-UnProject
  if !flag(BuildExamples)
    buildable: False
  main-is: UnProject.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-VArray
  if !flag(BuildExamples)
    buildable: False
  main-is: VArray.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook4-Wrap
  if !flag(BuildExamples)
    buildable: False
  main-is: Wrap.hs
  build-depends: base >= 3 && < 5, GLUT
  hs-source-dirs: examples/RedBook4
  default-language: Haskell2010
  ghc-options: -Wall

executable RedBook8-Triangles
  if !flag(BuildExamples)
    buildable: False
  main-is: Triangles.hs
  other-modules: LoadShaders
  build-depends: base >= 3 && < 5, bytestring >= 0.9 && < 0.11, GLUT
  hs-source-dirs: examples/RedBook8/Chapter01, examples/RedBook8/common
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/haskell-opengl/GLUT.git
